<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:background="@drawable/rounded_bottom_bg">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tech_logo2"
                    android:layout_marginTop="140dp"
                    android:layout_marginStart="30dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="60dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    app:hintTextColor="@color/bluedark"
                    app:boxStrokeErrorColor="@color/bluedark"
                    app:startIconDrawable="@drawable/user"
                    app:startIconTint="@color/bluedark"
                    android:hint="Email"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/bluedark"
                    style="@style/CustomTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/user"
                        android:inputType="text"
                        android:textColor="@color/bluedark"
                        android:textColorHint="@color/bluedark" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutpassword"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:hint="Password"
                    app:hintTextColor="@color/bluedark"
                    app:startIconDrawable="@drawable/pass"
                    app:startIconTint="@color/bluedark"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/bluedark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:drawableStart="@drawable/pass"
                        android:id="@+id/inputPassword"
                        android:inputType="textPassword"
                        android:textColor="@color/bluedark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp">
                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:background="@drawable/btn_bluedark"
                        android:fontFamily="@font/coolvetica_reguler"
                        android:text="Login"
                        android:textSize="14sp"/>

                    <com.google.android.material.button.MaterialButton

                        android:id="@+id/btn_registrasi"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/coolvetica_reguler"
                        android:text="Registrasi Teknisi"
                        android:textSize="14sp"
                        android:backgroundTint="@color/orange"
                        app:cornerRadius="12dp"/>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="60dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/AppVersi"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/grey" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</RelativeLayout>