...
                                android:layout_weight="1"
                                android:text="Penarikan Kabel"
                                android:fontFamily="@font/coolvetica_reguler"
                                android:textSize="14dp"
                                android:textColor="@color/bluedark"/>
                            <CheckBox
                                android:id="@+id/cek1"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:buttonTint="@color/bluedark"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
...
                                android:minLines="4"
                                android:textColor="@color/bluedark"
                                android:textColorHint="@color/bluedark"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_selesai"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/coolvetica_reguler"
                            android:text="Pekerjaan Selesai"
...
