<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaintenanceFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginVertical="10dp"
        android:id="@+id/recyclerViewMaintenance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:backgroundTint="@null"
        />

</FrameLayout>