<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluedark"
    tools:context=".RegistrasiTeknisi">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/tech_logo2"
                android:layout_marginTop="100dp"
                android:layout_marginStart="30dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/floating"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CustomTextInputLayout"
                        android:id="@+id/roleInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginTop="14dp"
                        android:hint="Pilih Role"
                        app:hintTextColor="@color/bluedark"
                        app:startIconDrawable="@drawable/badge"
                        app:startIconTint="@color/bluedark"
                        app:endIconMode="dropdown_menu"
                        app:endIconTint="@color/bluedark">

                        <AutoCompleteTextView
                            style="@style/CustomTextInputLayout"
                            android:id="@+id/autoCompleteRole"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:completionThreshold="1"
                            android:textColor="@color/bluedark"
                            android:backgroundTint="@color/bluedark"
                            android:textColorHint="@color/bluedark" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputlayoutKodeAkses"
                        style="@style/CustomTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="30dp"
                        android:hint="Kode Akses Admin"
                        app:hintTextColor="@color/bluedark"
                        app:startIconDrawable="@drawable/pass"
                        app:startIconTint="@color/bluedark"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/bluedark"
                        android:visibility="gone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableStart="@drawable/pass"
                            android:id="@+id/inputKodeAkses"
                            android:inputType="textPassword"
                            android:textColor="@color/bluedark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/noRegistKaryawan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        app:hintTextColor="@color/bluedark"
                        app:boxStrokeErrorColor="@color/bluedark"
                        app:startIconDrawable="@drawable/badge"
                        app:startIconTint="@color/bluedark"
                        android:hint="Nomor Register Karyawan"
                        app:endIconMode="clear_text"
                        style="@style/CustomTextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableStart="@drawable/badge"
                            android:id="@+id/inputNoRegistKaryawan"
                            android:inputType="text"
                            android:textColor="@color/bluedark"
                            android:textColorHint="@color/bluedark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/namaTeknisi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        app:hintTextColor="@color/bluedark"
                        app:boxStrokeErrorColor="@color/bluedark"
                        app:startIconDrawable="@drawable/user"
                        app:startIconTint="@color/bluedark"
                        android:hint="Nama Teknisi"
                        app:endIconMode="clear_text"
                        style="@style/CustomTextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableStart="@drawable/user"
                            android:id="@+id/inputNamaTeknisi"
                            android:inputType="text"
                            android:textColor="@color/bluedark"
                            android:textColorHint="@color/bluedark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        app:hintTextColor="@color/bluedark"
                        app:boxStrokeErrorColor="@color/bluedark"
                        app:startIconDrawable="@drawable/envelope"
                        app:startIconTint="@color/bluedark"
                        android:hint="Email"
                        app:endIconMode="clear_text"
                        style="@style/CustomTextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableStart="@drawable/envelope"
                            android:id="@+id/inputEmail"
                            android:inputType="text"
                            android:textColor="@color/bluedark"
                            android:textColorHint="@color/bluedark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutpassword"
                        style="@style/CustomTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="30dp"
                        android:hint="Password"
                        app:hintTextColor="@color/bluedark"
                        app:startIconDrawable="@drawable/pass"
                        app:startIconTint="@color/bluedark"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/bluedark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableStart="@drawable/pass"
                            android:id="@+id/inputPassword"
                            android:inputType="textPassword"
                            android:textColor="@color/bluedark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton

                        android:id="@+id/btn_registrasi"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/coolvetica_reguler"
                        android:text="Registrasi"
                        android:textSize="14sp"
                        android:backgroundTint="@color/orange"
                        app:cornerRadius="12dp"/>

                    <com.google.android.material.button.MaterialButton

                        android:id="@+id/btn_backLogin"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="30dp"
                        android:fontFamily="@font/coolvetica_reguler"
                        android:text=" Login"
                        android:textSize="14sp"
                        android:backgroundTint="@color/bluedark"
                        app:cornerRadius="12dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>




        </LinearLayout>
    </FrameLayout>


</RelativeLayout>